[ECLIPSE] cập nhật lại nút gửi trong bình luận của người dùng

--- a/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
@@ -234,6 +234,9 @@
 					<label for="comment">Nhập bình luận:</label>
 					<textarea class="form-control" name="comment" id="comment"
 						rows="3" required></textarea>
+						</div>
+						<button class="btn btn-primary" type="submit">Gửi</button>
+			</form>
 				</div>
 
 		<!-- Hiển thị bình luận -->
