[ECLIPSE] File word, hiển thị sản phẩm
- Chỉnh sửa file word phần giao diện, sql
- Hiển thị sản phẩm đang hoạt động lên trang người dùng
- Hiển thị size, màu, thương hiệu, danh mục đang hoạt động lên trang người dùng

--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -30,7 +30,7 @@
 										<div class="danhmuc-sp">
 
 											<ul>
-												<li th:each="c: ${cates}"><a
+												<li th:each="c: ${catesU}"><a
 													th:href="@{|/sanpham?cid=${c.categoryID}|}"
 													th:text="${c.categoryName}"></a></li>
 											</ul>
@@ -73,7 +73,7 @@
 										<div class="danhmuc-sp">
 
 											<ul>
-												<li th:each="b: ${brans}"><a
+												<li th:each="b: ${bransU}"><a
 													th:href="@{|/sanpham?bid=${b.brandID}|}"
 													th:text="${b.brandName}"></a></li>
 											</ul>
@@ -81,7 +81,6 @@
 									</div>
 								</div>
 							</div>
-
 							<div class="card">
 								<div class="card-header"
 									style="text-align: center; background-color: beige;">
