--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
@@ -7,7 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CONVERSE || [[${title}]]</title>
 <!-- Bootstrap CSS -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -21,23 +22,26 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
 	integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
 	crossorigin="anonymous" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+	rel="stylesheet">
 
 <link th:href="@{/assets/css/mycss.css}" rel="stylesheet" />
-<!-- <link th:href="@{/assets/css/toastcss.css}" rel="stylesheet" /> -->
 <link th:href="@{/assets/font/themify-icons/themify-icons.css}"
 	rel="stylesheet" />
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+	crossorigin="anonymous"></script>
 
 </head>
 
 <body ng-app="app" ng-controller="shopping-cart-ctrl">
- 
+
 
 
 
@@ -128,7 +132,7 @@
              imgZoom.style.opacity = 0;
          })
      </script>
-<!--      <script th:src="@{/static/assets/js/product-ctrl.js}" type="text/javascript"></script> -->
+	<!--      <script th:src="@{/static/assets/js/product-ctrl.js}" type="text/javascript"></script> -->
 </body>
 
 </html>
