[JAVA - JS - HTML] - Employee Manegement , Show profile

--- a/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
@@ -51,7 +51,7 @@
 									<ul class="dropdown-menu">
 									<th:block th:if="${#request.remoteUser}">
 										<li><a class="dropdown-item"
-											th:href="@{/thaydoithongtin}" th:text="#{nav.infor}">THÔNG
+											th:href="@{/thongtincanhan}" th:text="#{nav.infor}">THÔNG
 												TIN CÁ NHÂN</a></li>
 										<li><a class="dropdown-item"
 											th:href="@{/danhsachdonhang}" th:text="#{nav.order}">ĐƠN
