--- a/ConverseStore_Java6/src/main/resources/templates/user/thongtinmuahang.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/thongtinmuahang.html
@@ -5,6 +5,46 @@
 <title>Insert title here</title>
 </head>
 <body>
+    <!-- Modal for displaying error messages -->
+<div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true" >
+    <div class="modal-dialog">
+        <div class="modal-content" style="text-align: center;">
+            <div class="modal-header" style="background-color: #FF6666; color: white;">
+                <h5 class="modal-title" id="errorModalLabel"><b>Lỗi</b></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="color: red">
+                <b>{{ errorMessage }}</b><br>
+                <span style="font-size: 30px"><i class="bi bi-exclamation-triangle"></i></span>
+                 <!-- Display the error message here -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="background: #FF6666">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for displaying error messages -->
+<div class="modal fade" id="errorModal1" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true" data-bs-backdrop="static"ư>
+    <div class="modal-dialog">
+        <div class="modal-content" style="text-align: center;">
+            <div class="modal-header" style="background-color: #00CC66; color: white;">
+                <h5 class="modal-title" id="errorModalLabel"><b>Thông báo</b></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="color: green;font-size: 2em;" >
+                <b>{{ messageSuccess }}</b><br>
+                <span style="font-size:50px"><i class="bi bi-check"></i></span>
+                 <!-- Display the success message here -->
+            </div>
+            <div class="modal-footer" style="text-align: center;">
+                <a th:href="@{/trangchu}"  class="btn btn-secondary" style="background: #00CC66">Quay Lại Trang Chủ</a>
+                <!-- <a th:href="@{|/order/orderdetail/${id}|}"  class="btn btn-secondary" style="background: #00CC66">Kiểm Tra Đơn Hàng</a> -->
+            </div>
+        </div>
+    </div>
+</div>
 	  <div id="mainReceipt_Info">
         <div class="row " style="display: flex; justify-content: center;">
             <div class="card col-md-4 p-0" >
@@ -14,16 +54,16 @@
                     <form action="">
                         <div class="row">
                             <div class="mb-3">
-                                <label for="exampleFormControlInput1" class="form-label">Họ Và Tên:</label>
+                                <label style="font-size: 16px;" for="exampleFormControlInput1" class="form-label">Họ Và Tên:</label>
                                 <input type="text" ng-model="name" class="form-control" id="exampleFormControlInput1" placeholder="">
                             </div>
                             
                             <div class="mb-3">
-                                <label for="exampleFormControlInput1" class="form-label">Số Điện Thoại:</label>
+                                <label  style="font-size: 16px;" for="exampleFormControlInput1" class="form-label">Số Điện Thoại:</label>
                                 <input type="text" ng-model="phone" class="form-control" id="exampleFormControlInput1" placeholder="">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Địa Chỉ:</label>
+                                <label  style="font-size: 16px;" for="exampleFormControlTextarea1" class="form-label">Địa Chỉ:</label>
                                 <textarea class="form-control" ng-model="address" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
 
@@ -41,56 +81,44 @@
                         <thead>
                             <tr style="font-size: 20px;">
                                 <th class="left">Sản Phẩm</th>
+                              
                                 <th>Size</th>
+                                <th>Màu</th>
+                                <th>Đơn Giá</th>
                                 <th>Số Lượng</th>
+                                <th>Thành tiền</th>
+
+
                                 <th class="right"></th>
 
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td class="left">Converse Renew Canvas</td>
-                                <td>38</td>
-                                <td>1</td>
-                                <td class="right">1.990.000đ</td>
-
-                            </tr>
-                            <tr>
-                                <td class="left">Converse Renew Canvas</td>
-                                <td>38</td>
-                                <td>1</td>
-                                <td class="right">1.990.000đ</td>
-
-                            </tr>
-                            <tr>
-                                <td class="left">Converse Renew Canvas</td>
-                                <td>38</td>
-                                <td>1</td>
-                                <td class="right">1.990.000đ</td>
-
-                            </tr>
-                            <tr>
-                                <td class="left">Converse Renew Canvas</td>
-                                <td>38</td>
-                                <td>1</td>
-                                <td class="right">1.990.000đ</td>
+                            <tr ng-repeat="item in cart.cartItems">
+                                <td>{{item.productVariant.products.productName}}</td>
+                              
+                               
+                                <td>{{item.productVariant.sizes.sizeNumber}}</td>
+                                <td>{{item.productVariant.colors.colorName}}</td>
+                                <td>{{item.productVariant.products.price| currency:"₫"}}</td>
+                                <td>{{item.quantity}}</td>
+                               
+                                <td class="amount">{{cart.getSubtotalForItem(item) | currency:"₫" }}</td>
                             </tr>
 
 
                         </tbody>
                         <thead>
                             <tr style="font-size: 20px;">
-                                <th class="left">Tạm Tính:</th>
-                                <th></th>
-                                <th></th>
-                                <th class="right">7.960.000đ</th>
+                                <th colspan="3" class="left">Tạm Tính:</th>
+                               
+                                <th colspan="3" class="right">{{cart.amount | currency:"₫" }}</th>
 
                             </tr>
                             <tr style="font-size: 30px;">
-                                <th class="left">Tổng Tiền:</th>
-                                <th></th>
-                                <th></th>
-                                <th class="right">7.960.000đ</th>
+                                <th colspan="3" class="left">Tổng Tiền:</th>
+                               
+                                <th colspan="3" class="right">{{cart.amount | currency:"₫" }}</th>
 
                             </tr>
                         </thead>
